<resources>
    <string name="app_name">Shopping List</string>
    <string name="register">Zarejestruj się</string>
    <string name="my_lists">Moje listy</string>
    <string name="login">Zaloguj się</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="friends">Znajomi</string>
    <string name="lists">Listy</string>
    <string name="templates">Szablony</string>
    <string name="options">Ustawienia</string>
    <string name="logout">Wyloguj się</string>
    <string name="add">Dodaj</string>
    <string name="edit">Edytuj</string>
    <string name="product">Produkt</string>
    <string name="category">Kategoria</string>
    <string name="amount">Ilość</string>
    <string name="measure">Miara</string>
    <string name="addProduct">Dodaj produkt</string>
    <string name="editProduct">Edytuj produkt</string>
    <string name="createList">Stwórz listę</string>
    <string name="createTemplate">Stwórz szablon</string>
    <string name="settings">Ustawienia</string>
    <string name="useTemplate">Użyj szablonu</string>
    <string name="addList">Utwórz nową listę</string>
    <string name="newProductToList">Nowy produkt</string>

    <!--PARSE SERVER CONFIG VALUES:-->
    <string name="parse_server_url">http://94.23.7.172:9652/parsesl/</string>
    <string name="parse_app_id">R3J9pslx57inrTP8IEUIykY</string>
    <string name="msg_custom_product_invalid_input">Podano niewłaściwe dane!</string>
    <string name="customProductName">Nazwa</string>
    <string name="customProductCategory">Kategoria</string>
    <string name="customProductDescription">Opis</string>
    <string name="customProductMeasure">Jednostka miary</string>
    <string name="customProductPrice">Cena za jednostkę</string>
    <string name="clear">Wyczyść</string>
    <string name="customUserProducts">PRODUKTY UŻYTKOWNIKA</string>
    <string name="save">Zapisz</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="addTemplate">Dodaj szablon</string>
    <string name="never">nigdy</string>
    <string name="empty_conversation">Zacznij konwersację!</string>
    <string name="enter_message">Wprowadź wiadomość</string>
    <string name="send">WYŚLIJ</string>
    <string name="no_results">Brak wyników</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="conversation_with">Rozmowa z</string>
    <string name="minutes_ago">minut temu</string>
    <string name="couldnt_load_messages">Nie udało się załadować wiadomości!</string>
    <string name="unknown_error">Nieznany błąd, spróbuj ponownie.</string>
    <string name="registration_completed">Pomyślnie zarejestrowano!</string>
    <string name="email_format_invalid">Nieprawidłowy format e-maila</string>
    <string name="server_timed_out">Przekroczono czas odpowiedzi serwera</string>
    <string name="connection_failed">Połączenie nieudane, spróbuj ponownie</string>
    <string name="email_taken">E-mail jest już zajęty</string>
    <string name="login_taken">Login jest już zajęty</string>
    <string name="login_missing">Login nie może być pusty</string>
    <string name="passwords_dont_match">Podane hasła muszą być takie same</string>
    <string name="login_too_short">Login musi mieć co najmniej 4 znaki</string>
    <string name="pwd_too_short_or_same_as_login">Hasło musi mieć co najmniej 6 znaków i być inne niż login</string>
    <string name="not_logged_in">niezalogowany</string>
    <string name="no_friends">Nie masz jeszcze znajomych.</string>
    <string name="no_invites">Nie masz żadnych zaproszeń.</string>
    <string name="my_friends">Moi znajomi</string>
    <string name="invites">Zaproszenia</string>
    <string name="search_engine">Wyszukiwarka</string>
    <string name="time">Czas</string>
    <string name="date">Data</string>

    <!--CATEGORIES:-->
    <string-array name="product_categories">
        <item>Warzywa i owoce</item>
        <item>Mięso</item>
        <item>Mrożonki i lody</item>
        <item>Kawa, herbata, kakao</item>
        <item>Napoje</item>
        <item>Nabiał</item>
        <item>Pieczywo</item>
        <item>Przekąski</item>
        <item>Alkohole i tytoń</item>
        <item>Konserwy i prod. paczkowane</item>
        <item>Dla zwierząt</item>
        <item>Dla dzieci</item>
        <item>Zabawki</item>
        <item>Leki</item>
        <item>Higiena</item>
        <item>Chemia</item>
        <item>Urządzenia elektroniczne</item>
        <item>Akcesoria samochodowe</item>
        <item>Inne</item>
    </string-array>

    <string-array name="product_icons">
        <item>cat_vegetables</item>
        <item>cat_meat</item>
        <item>cat_frozen</item>
        <item>cat_tea</item>
        <item>cat_beverages</item>
        <item>cat_dairy</item>
        <item>cat_bread</item>
        <item>cat_snacks</item>
        <item>cat_alcohols</item>
        <item>cat_canned_packaged</item>
        <item>cat_pets</item>
        <item>cat_kids</item>
        <item>cat_toys</item>
        <item>cat_medicines</item>
        <item>cat_hygiene</item>
        <item>cat_chemicals</item>
        <item>cat_electronics</item>
        <item>cat_car_parts</item>
        <item>cat_other</item>
    </string-array>

    <!--MEASURES:-->
    <string-array name="product_measure">
        <item>Inne</item>
        <item>Butelki</item>
        <item>Gramy</item>
        <item>Kilogramy</item>
        <item>Litry</item>
        <item>Opakowania</item>
        <item>Sztuki</item>
    </string-array>

</resources>
