<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ls="http://schemas.android.com/apk/res-auto"
    android:id="@+id/custom_products_appender_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.pollub.shoppinglist.activity.AddCustomProductActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/custom_products_appender_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/custom_products_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/custom_products_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:ems="10"
                        android:hint="@string/customProductName"
                        android:inputType="textPersonName"
                        tools:layout_editor_absoluteY="61dp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/custom_products_description_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/custom_products_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:ems="10"
                        android:hint="@string/customProductDescription"
                        android:inputType="textMultiLine"
                        tools:layout_editor_absoluteY="168dp" />

                </android.support.design.widget.TextInputLayout>

                <com.satsuware.usefulviews.LabelledSpinner
                    android:id="@+id/custom_products_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    ls:labelText="@string/customProductCategory" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/custom_products_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/custom_products_reset_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@android:color/holo_red_dark"
                android:onClick="resetFormValues"
                android:layout_marginRight="4dp"
                android:layout_weight=".5"
                android:text="@string/clear" />

            <Button
                android:id="@+id/custom_products_add_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="4dp"
                android:layout_weight=".5"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="submitCustomProduct"
                android:text="@string/save" />

        </LinearLayout>
    </RelativeLayout>

    <include layout="@layout/menu_burger" />


</android.support.v4.widget.DrawerLayout>