<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.pollub.shoppinglist.activity.MessagesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/empty_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/empty_conversation"
                android:textSize="18sp"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/message_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:stackFromEnd="true"
                tools:listitem="@layout/item_message_sent" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="100dp"
                android:layout_weight="1"
                android:visibility="gone" />

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
                <!--app:layout_scrollFlags="scroll|enterAlways"-->
            </android.support.design.widget.AppBarLayout>

        </android.support.design.widget.CoordinatorLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="0dp"
            android:background="#dfdfdf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="48dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/message_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/enter_message"
                android:maxLines="6" />

            <Button
                android:id="@+id/send_button"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/send"
                android:textSize="14dp" />
        </LinearLayout>
    </LinearLayout>
</layout>

